Closed Bug 260911 Opened 21 years ago Closed 16 years ago

Hierarchy is not spelled correctly in some files (eg. heirarchy)

Categories

(Core :: General, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla1.9.3a5

People

(Reporter: david, Assigned: mkohler)

References

()

Details

(Whiteboard: bugday0420 [good first bug])

Attachments

(2 files)

/editor/libeditor/base/nsEditor.cpp, line 3628 -- // screwing around with the class heirarchy here in order /editor/libeditor/html/nsHTMLEditRules.cpp, line 3896 -- // keep looking up the heirarchy as long as we dont hit the body or a table element /editor/libeditor/html/nsHTMLEditor.cpp, line 2117 -- allowed, will attempt to find a parent in the parent heirarchy of *ioParent that will /extensions/cookie/nsCookiePermission.cpp, line 241 -- // we find a docshell in the heirarchy of type APP_TYPE_MAIL, then assume /content/base/public/nsIDocumentEncoder.h, line 242 -- * to aEncodedString. Parent heirarchy information is encoded /content/base/src/nsContentIterator.cpp, line 263 -- // that they change levels at most n+m times, where n is the height of the parent heirarchy from the /content/base/src/nsContentIterator.cpp, line 264 -- // range start to the common ancestor, and m is the the height of the parent heirarchy from the /widget/src/gtksuperwin/gtkmozbox.c, line 234 -- /* look for a parent GtkWindow in the heirarchy */ /widget/src/xlib/nsWidget.cpp, line 166 -- // Borrowed heavily from GTK. This should go through heirarchy of XWindow /mailnews/base/util/nsMsgGroupRecord.h, line 149 -- PRInt32 GetDepth(); // Returns how deep in the heirarchy we are. /mailnews/import/outlook/src/MapiApi.h, line 101 -- // Fill in the folders list with the heirarchy from the given /mailnews/mime/cthandlers/glue/mimexpcom.cpp, line 45 -- * These calls are necessary to expose the object class heirarchy /mailnews/mime/cthandlers/glue/mimexpcom.h, line 47 -- object heirarchy for the mime chart. The class hierarchy is: /mailnews/mime/src/mimecom.cpp, line 46 -- * These calls are necessary to expose the object class heirarchy /mailnews/mime/src/mimecth.cpp, line 40 -- * These calls are necessary to expose the object class heirarchy /mailnews/mime/src/mimecth.h, line 57 -- object heirarchy for the mime chart. The class hierarchy is: /other-licenses/libical/doc/UsingLibical.lyx, line 1786 -- The file storage routines are organized in an inheritance heirarchy that
Product: Browser → Seamonkey
MASS-CHANGE: This bug report is registered in the SeaMonkey product, but has been without a comment since the inception of the SeaMonkey project. This means that it was logged against the old Mozilla suite and we cannot determine that it's still valid for the current SeaMonkey suite. Because of this, we are setting it to an UNCONFIRMED state. If you can confirm that this report still applies to current SeaMonkey 2.x nightly builds, please set it back to the NEW state along with a comment on how you reproduced it on what Build ID, or if it's an enhancement request, why it's still worth implementing and in what way. If you can confirm that the report doesn't apply to current SeaMonkey 2.x nightly builds, please set it to the appropriate RESOLVED state (WORKSFORME, INVALID, WONTFIX, or similar). If no action happens within the next few months, we move this bug report to an EXPIRED state. Query tag for this change: mass-UNCONFIRM-20090614
Status: NEW → UNCONFIRMED
This bug doesn't belong in SeaMonkey; if it is deemed desirable to fix it, it should maybe be split according to the components to which the files containing these typos actually belong. Moving to Core::General for now; feel free to WONTFIX or to split into daughter bugs.
Assignee: general → nobody
Product: SeaMonkey → Core
QA Contact: general → general
Whiteboard: bugday0420
Keywords: student-project
Whiteboard: bugday0420 → [good first bug] bugday0420
This isn't really a good student project bug, though it might be a good first bug. I also think you probably just want to add it to the spelling meta bug, bug 506041.
Keywords: student-project
Assignee: nobody → michaelkohler
This patches changes all occurrences of "heirarchy" to "hierarchy" in mozilla-central. >diff -r dff91f83bc84 content/base/public/nsIDocumentEncoder.idl >--- a/content/base/public/nsIDocumentEncoder.idl Wed Apr 21 17:07:44 2010 -0700 >+++ b/content/base/public/nsIDocumentEncoder.idl Thu Apr 22 04:57:26 2010 +0200 >@@ -297,17 +297,17 @@ interface nsIDocumentEncoder : nsISuppor > * > * @return The document encoded into a string. > */ > AString encodeToString(); > > /** > * Encode the document into a string. Stores the extra context information > * into the two arguments. >- * @param [OUT] aContextString The string where the parent heirarchy >+ * @param [OUT] aContextString The string where the parent hierarchy > * information will be stored. > * @param [OUT] aInfoString The string where extra context info will > * be stored. > * @return The document encoded as a string. > * > */ > AString encodeToStringWithContext( out AString aContextString, > out AString aInfoString); For this change it's not necessary to change the uuid, is it? The same for the following, right? >diff -r dff91f83bc84 embedding/browser/activex/src/control/MozillaControl.idl >--- a/embedding/browser/activex/src/control/MozillaControl.idl Wed Apr 21 17:07:44 2010 -0700 >+++ b/embedding/browser/activex/src/control/MozillaControl.idl Thu Apr 22 04:57:26 2010 +0200 >@@ -124,17 +124,17 @@ library MOZILLACONTROLLib > [helpstring("Refresh normal")] REFRESH_NORMAL = 0, //== OLECMDIDF_REFRESH_NORMAL > [helpstring("Refresh if expired")] REFRESH_IFEXPIRED = 1, //== OLECMDIDF_REFRESH_IFEXPIRED > [helpstring("Refresh completely")] REFRESH_COMPLETELY = 3 //== OLECMDIDF_REFRESH_COMPLETELY > } RefreshConstants; > > [id(106), helpstring("Stops opening a file."), helpcontext(0x0000)] > HRESULT Stop(); > >- // Automation heirarchy... >+ // Automation hierarchy... > [id(200), propget, helpstring("Returns the application automation object if accessible, this automation object otherwise.."), helpcontext(0x0000)] > HRESULT Application([out,retval] IDispatch** ppDisp); > > [id(201), propget, helpstring("Returns the automation object of the container/parent if one exists or this automation object."), helpcontext(0x0000)] > HRESULT Parent([out,retval] IDispatch** ppDisp); > > [id(202), propget, helpstring("Returns the container/parent automation object, if any."), helpcontext(0x0000)] > HRESULT Container([out,retval] IDispatch** ppDisp);
Attachment #440686 - Flags: review?(timeless)
This patches changes all occurrences of "heirarchy" to "hierarchy" in comm-central.
Attachment #440687 - Flags: review?(timeless)
Whiteboard: [good first bug] bugday0420 → [has patches] [needs review] bugday0420
Attachment #440686 - Flags: review?(timeless) → review+
Attachment #440687 - Flags: review?(timeless) → review+
comment changes don't require changes to uuid's. it's only a problem if you change the spelling of things like methods or if your change is from one meaningful word (which means something different).
Keywords: checkin-needed
Whiteboard: [has patches] [needs review] bugday0420 → [has patches] bugday0420
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [has patches] bugday0420 → checkin needed on comm-central [good first bug] bugday0420
Target Milestone: --- → mozilla1.9.3a5
Keywords: checkin-needed
Whiteboard: checkin needed on comm-central [good first bug] bugday0420 → bugday0420
Whiteboard: bugday0420 → bugday0420 [good first bug]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: