Bug 260911 - Hierarchy is not spelled correctly in some files (eg. heirarchy). r=timeless

--HG--
extra : rebase_source : 436dd13130b4dbe9c1056b34d972c7148bb2362f