mailnews/mime/src/mimecth.cpp
@@ -37,7 +37,7 @@
 #include "mimecth.h"
 
 /*
- * These calls are necessary to expose the object class heirarchy 
+ * These calls are necessary to expose the object class hierarchy 
  * to externally developed content type handlers.
  */
 MimeInlineTextClass *
